# rust_ai

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  test.cjs
common/: Cargo.toml
common/src/: email.rs  gmail.rs  lib.rs
master/: .env  Cargo.toml
master/src/: notifier.rs
pi_email/: Cargo.toml
pi_email/common/: Cargo.toml
pi_email/common/src/: classifier.rs  discord.rs  gmail.rs  lib.rs
pi_email/master/: Cargo.toml
pi_email/master/src/: ai.rs  api.rs  gmail.rs  lib.rs  notifier.rs
pi_postman_wasm/: Cargo.toml  package.json
pi_postman_wasm/common/src/: classifier.rs  discord.rs
pi_postman_wasm/master/src/: email.rs  notifier.rs
pkg/: wasm_host.d.ts  wasm_host.js  wasm_host_bg.wasm  wasm_host_bg.wasm.d.ts
temp_/: ui.rs
wasm_host/: Cargo.toml
wasm_host/src/: lib.rs
worker/: Cargo.toml  mod.rs
worker/src/: api.rs  classifier.rs  lib.rs
