[package]
name    = "wasm_host"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_host"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

################  공통 의존  ################
[dependencies]
wasm-bindgen       = "0.2"
wasm-bindgen-futures = "0.4"
serde              = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"
futures-lite = "1"
serde_json   = "1"

################  타깃별 분기  ################
# ─── 호스트(네이티브) 빌드 ───
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
common = { path = "../common" }                 # default-features=ON  →  OpenAI 사용 가능

# ─── WASM 빌드 ───
[target.'cfg(target_arch = "wasm32")'.dependencies]
common = { path = "../common", default-features = false, features = ["wasm"] }

[[bin]]
name = "cli"            # 만들어질 실행 파일 이름 → cli.wasm
path = "src/bin/cli.rs" # 실제 소스 코드가 들어갈 경로