#worker/Cargo.toml

[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["json","rustls-tls"], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.7.1"
