#common/src/Cargo.toml

[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","rustls-tls"], default-features = false }
imap = "3.0.0-alpha.15"
native-tls = "0.2"
mailparse = "0.13"
lettre = { version = "0.11.4", features = ["builder","smtp-transport","tokio1-native-tls"] }
openai = "1.0.0-alpha.7"
uuid = { version = "1.6.0", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
tokio = { version = "1.37", features = ["full"] }
regex = "1.7.1"
scraper = "0.23.1"


# 로깅을 위해 추가
tracing = "0.1"
