#master/src/Cargo.toml

[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.37", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
fxhash = "0.2"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.0", features = ["v4","serde"] }
lazy_static = "1.5.0"
openai = "1.0.0-alpha.7"

[[bin]]
name = "notifier"
path = "src/notifier.rs"